tests/errors/err_multiple_errors.bas
10 LET X 5
20 Y = 10 +
30 PRINT "UNCLOSED
